# book_shop

./: .dockerignore  .gitignore  docker-compose.yml
web/: .env  Dockerfile  pyproject.toml  requirements.txt
web/api/: urls.py
web/api/catalog/: serializers.py  urls.py  views.py
web/api/orders/: serializers.py  urls.py  views.py
web/book_shop/: settings.py  urls.py  views.py
web/book_shop/templates/: index.html
web/books/: models.py
web/catalog/: admin.py  models.py  permissions.py
web/catalog/migrations/: 0001_initial.py  0002_test.py  0003_delete_test.py  0004_bookinstance.py  0005_city_orders_orders_detail_publisher_book_price_and_more.py  0006_alter_publisher_phone.py  0007_alter_book_isbn_alter_publisher_phone.py  0008_book_number_of_pages_book_publisher.py  0009_book_user.py  0010_rename_orders_order_and_more.py  0011_remove_book_year.py  0012_book_year.py  0013_delete_order_delete_order_detail.py  0014_remove_book_quantity_bookinstance.py  0015_therestofthebook_delete_bookinstance.py  0016_alter_therestofthebook_book_and_more.py  0017_alter_book_price.py  0018_remove_book_user.py
web/orders/: admin.py  choises.py  models.py
web/orders/migrations/: 0001_initial.py  0002_alter_orderdetail_order.py  0002_remove_orderdetail_book_alter_order_book_and_more.py  0002_rename_created_order_updated_at_order_created_at_and_more.py  0003_remove_order_order_time_and_data_remove_order_status_and_more.py  0004_alter_order_user.py  0005_remove_order_user_order_user.py  (+5 more)
web/user_profile/: admin.py  models.py
web/users/: admin.py  models.py
(+2 files in other folders)
